# turkish-cfg

./: README.md  init.md  main.py  pyproject.toml  roadmap.md
examples/: sample_sentences.txt
savyar/: README.md  main.py  requirements.txt
savyar/app/: cli.py  data_manager.py  engine.py  file_paths.py  nlp_pipeline.py
savyar/data/: ekistemez.txt  eşkelam.txt  final_suffix_metrics.json  mastarad.txt  treebank_vnoun.py  verbs.txt
savyar/data/boun_treebank/: treebank_adapter.py
savyar/data/google_treebank/: treebank_adapter.py
savyar/data/metu_treebank/: treebank_adapter.py
savyar/docs/: ml_model.md  workflows.md
savyar/ml/: config.py  ml_ranking_model.py
savyar/util/: README.md  decomposer.py  suffix.py  word_methods.py
savyar/util/suffixes/: n2n_suffixes.py  suffix_info.md
savyar/util/suffixes/n2n/: adverbials.py  case_suffixes.py  conjugation_suffixes.py  copula.py  derivationals.py  marking_suffix.py  plural_suffix.py  possessive_suffix.py  with_le.py
savyar/util/suffixes/n2v/: verbifiers.py
savyar/util/suffixes/v2n/: gerunds.py  nounifiers.py  participles.py  predicatives.py
savyar/util/suffixes/v2v/: verb_compounds.py  verb_derivationals.py
savyar/util/words/: closed_class.py  numerals.py  words.py
tests/: test_constraints.py  test_izafet.py  test_morphology.py  test_parser.py  test_scrambling.py
turkish_cfg/: __init__.py  cli.py  grammar.lark  morphology.py  parser.py  savyar_worker.py  tokenizer.py  tree_mapper.py
