[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turkish-cfg"
version = "0.1.0"
description = "A planned rule-based Turkish CFG parser with morphology-aware lattice parsing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
turkish-cfg = "turkish_cfg.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

